[metadata]
name = pdb-attach
author = Spencer Mitchell
author-email = smitchell556@gmail.com
summary =  A python debugger that can attach to running processes.
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/smitchell556/pdb-attach
project_urls =
    Bug Tracker = https://github.com/smitchell556/pdb-attach/issues
    Documentation = https://github.com/smitchell556/pdb-attach/README.md
    Source Code = https://github.com/smitchell556/pdb-attach
license = BSD 3-Clause
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    pdb
    debug
    debugger
    process

[options.package_data]
pdb_attach = py.typed, *.pyi

[files]
packages =
    pdb-attach

[extras]
linting =
    flake8
    flake8-bandit
    flake8-bugbear
    flake8-builtins
    flake8-docstrings
    flake8-eradicate
    flake8-pytest-style
    flake8-simplify
    mccabe
    mypy
testing =
    pytest

[flake8]
ignore = S322
per-file-ignores =
    test/test_pdb_attach.py:E402,S101,S404,S603,S607
